--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-Test
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Ryan Delayat</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/x-icon" href="img/icon.ico">
+  <script src="js/script.js"></script>
+</head>
+
+<body>
+  <!-- navbar -->
+  <ul class="navbar">
+    <li class="m-left name">Ryan Delayat - Page personnelle</li>
+    <li class="m-right"><a href="CV_DELAYAT_Ryan.pdf">CV</a></li>
+  </ul>
+  <!-- articles -->
+  <div class="articles">
+    <section class="projects">
+      <div class="section-title">Projets </div>
+
+      <div class="project-title">> Création d'une application d'édition de traces GPS</div>
+      <div class="project-content"> Cette application permet de créer une trace GPS en partant de 0, ou d'en modifier
+        une déjà existante. Elle possède quelques outils,
+        comme la sélection par zone, le lissage de sections, le calcul de statistiques simples (par exemple la vitesse
+        ou le dénivelé au cours du temps), et la correction
+        automatique de points "mal localisés". Il est possible de créer un compte et de mettre en ligne ses propres
+        traces.<br />
+
+
+       <div class="project-imgs">
+        <img class="project-img" src="img/sum1.png">
+        <img class="project-img" src="img/sum2.png">
+        <img class="project-img" src="img/sum3.png">
+       </div>
+
+        Ce projet utilise Python avec Django pour le back-end et Javascript en front, avec Leaflet pour l'affichage des
+        données cartographiques.
+        <div class="project-tags">
+          <div class="project-tag">Perso</div>
+          <div class="project-tag">Python</div>
+          <div class="project-tag">Django</div>
+          <div class="project-tag">Javascript</div>
+          <div class="project-tag">Leaflet</div>
+          <div class="project-tag">HTML</div>
+          <div class="project-tag">CSS</div>
+        </div>
+
+      </div>
+
+      <div class="project-title">> Réalisation d'un compilateur pour un sous-langage de Java</div>
+      <div class="project-content"> Il s'agit d'un projet de génie logiciel effectué durant le mois de janvier 2023 en
+        équipe de 5 dans le cadre scolaire. Nous avons réalisé un compilateur
+        pour un sous-langage de Java, permettant de compiler des codes plus ou moins complexes.
+        <div class="project-imgs">
+          <img class="project-img" src="img/gl.png">
+          <img class="project-img" src="img/gl2.png">
+          <img class="project-img" src="img/gl3.png">
+         </div>
+        <div class="project-tags">
+          <div class="project-tag">Scolaire</div>
+          <div class="project-tag">Java</div>
+          <div class="project-tag">POO</div>
+          <div class="project-tag">ANTLR</div>
+          <div class="project-tag">Git</div>
+          <div class="project-tag">Bash</div>
+          <div class="project-tag">Jacoco</div>
+          <div class="project-tag">16.5/20</div>
+        </div>
+      </div>
+
+      <div class="project-title">> Création d'une bibliothèque d'interfaces graphique</div>
+      <div class="project-content"> Ce projet a pour but de créer une bibliothèque permettant à un programmeur de
+        réaliser des interfaces graphiques, avec par exemple la création de fenêtre, de boutons, de sliders...
+        <div class="project-tags">
+          <div class="project-tag">Scolaire</div>
+          <div class="project-tag">C</div>
+          <div class="project-tag">Git</div>
+          <div class="project-tag">17/20</div>
+        </div>
+      </div>
+    </section>
+    <section class="cv">
+      <div class="section-title">CV </div>
+      Pour voir mon CV, cliquez sur ce bouton :
+      <a class="cv-btn" href="CV_DELAYAT_Ryan.pdf">Ouvrir</a>
+    </section>
+    <section class="bottom-section contact">
+      <div class="section-title">Contact</div> ryan.delayat@grenoble-inp.org
+    </section>
+  </div>
+</body>
+
+</html>
