--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <!-- navbar -->
   <ul class="navbar">
-    <li class="m-left name">Ryan Delayat - Page personnelle</li>
-    <li class="m-right"><a href="CV_DELAYAT_Ryan.pdf">CV</a></li>
+    <li class="m-left name">Ryan Delayat - Home page</li>
+    <li class="m-right"><a href="RESUME_DELAYAT_Ryan.pdf">My resume</a></li>
   </ul>
   <!-- articles -->
   <div class="articles">
@@ -21,14 +21,14 @@
       <div class="section-title">Contact</div> ryan.delayat@grenoble-inp.org
     </section>
     <section>
-      <div class="section-title">Expériences </div>
+      <div class="section-title">Experiences </div>
 
-      <div class="project-title">> Stage en développement et analyse de données à <a href="https://www.lichens.io">
-          Lichens</a>, 10 semaines, été 2023</div>
-      <div class="project-content"> Durant ce stage, j'ai développé une application
-        web permettant de visualiser et d'exploiter des fichiers résultant
-        de mesures sur une carte de façon interactive. J'ai également déployé cette
-        application sur un VPS permettant aux membres de l'entreprise d'y accéder facilement.
+      <div class="project-title">> Software development and data analysis internship at <a href="https://www.lichens.io">
+          Lichens</a>, 10 weeks, summer 2023</div>
+      <div class="project-content"> During this internship, I developed a web application
+        to visualize and exploit files resulting from measurements
+        on an interactive map. I also deployed this application on a
+        VPS allowing easy access for company members.
         <div class="project-tags">
           <div class="project-tag">Python</div>
           <div class="project-tag">Django</div>
@@ -45,15 +45,15 @@
         </div>
       </div>
 
-    <div class="project-title">> Déformation des éléments linéaires, INRIA,
-      Février - Mai 2023, une demi-journée par semaine
+    <div class="project-title">> Deforming linear elements, <a href="https://www.inria.fr/en">INRIA</a>,
+      February - May 2023, half a day per week
     </div>
-    <div class="project-content"> Ce projet prend place dans le contexte du cours 
-      "Introduction à la recherche en laboratoire" de l'Ensimag. Le but de ce travail 
-      est de trouver une méthode générale permettant de déformer les éléments linéaires 
-      cartographiques (route, piste de ski, rivière, chemin...). J'ai pu appliquer mes résultats 
-      au cas du dessin de pistes de ski à partir de données cartographiques, en voulant approcher le style traditionnel de 
-      l'atelier <a href="http://atelier.novat.free.fr/atelier_pierre_novat/accueil.html">Novat</a>. 
+    <div class="project-content"> This project takes place in the context of the 
+      "Introduction to laboratory research" course at Ensimag. The aim of this work 
+      is to find a general method for deforming linear cartographic features 
+      (roads, ski runs, rivers, paths, etc.). I was able to apply my results 
+      to the case of drawing ski runs from cartographic data, with the aim of approaching 
+      the traditional <a href="http://atelier.novat.free.fr/atelier_pierre_novat/accueil.html">Novat</a> style
       
       <div class="project-imgs">
         <img class="project-img" src="img/irl1.png">
@@ -68,21 +68,20 @@
       </div>
 
       
-      <a href="IRL_Présentation.pdf"><div class="btn">Ma présentation</div></a>
+      <a href="IRL_Presentation.pdf"><div class="btn">My presentation</div></a>
 
     </div>
 
     </section>
     <section class="projects">
-      <div class="section-title">Projets </div>
+      <div class="section-title">Projects </div>
 
-      <div class="project-title">> Création d'une application d'édition de traces GPS</div>
-      <div class="project-content"> Cette application permet de créer une trace GPS en partant de 0, ou d'en modifier
-        une déjà existante. Elle possède quelques outils,
-        comme la sélection par zone, le lissage de sections, le calcul de statistiques simples (par exemple la vitesse
-        ou le dénivelé au cours du temps), et la correction
-        automatique de points "mal localisés". Il est possible de créer un compte et de mettre en ligne ses propres
-        traces.<br />
+      <div class="project-title">> Creation of a GPS track editing application</div>
+      <div class="project-content"> This application can be used to create a GPS track from 0, 
+        or to modify an existing one. It features a number of tools, such as zone selection, 
+        smoothing of sections, calculation of simple statistics (e.g. speed or elevation
+        over time), automatic correction of points, account creation and 
+        track uploading.<br />
 
 
         <div class="project-imgs">
@@ -91,10 +90,10 @@
           <img class="project-img" src="img/sum3.png">
         </div>
 
-        Ce projet utilise Python avec Django pour le back-end et Javascript en front, avec Leaflet pour l'affichage des
-        données cartographiques.
+        This project uses Python with Django for the back-end and Javascript 
+        on the front, with Leaflet for displaying map data.
         <div class="project-tags">
-          <div class="project-tag">Perso</div>
+          <div class="project-tag">Personal</div>
           <div class="project-tag">Python</div>
           <div class="project-tag">Django</div>
           <div class="project-tag">Javascript</div>
@@ -105,42 +104,44 @@
 
       </div>
 
-      <div class="project-title">> Réalisation d'un compilateur pour un sous-langage de Java</div>
-      <div class="project-content"> Il s'agit d'un projet de génie logiciel effectué durant le mois de janvier 2023 en
-        équipe de 5 dans le cadre scolaire. Nous avons réalisé un compilateur
-        pour un sous-langage de Java, permettant de compiler des codes plus ou moins complexes.
+      <div class="project-title">> Building a compiler for a Java sub-language </div>
+      <div class="project-content"> This is a software engineering project carried out 
+        during the month of January 2023 in a team of 5. We created a compiler
+        for a sub-language of Java, allowing more or less complex code to be compiled.
         <div class="project-imgs">
           <img class="project-img" src="img/gl.png">
           <img class="project-img" src="img/gl2.png">
           <img class="project-img" src="img/gl3.png">
         </div>
         <div class="project-tags">
-          <div class="project-tag">Scolaire</div>
+          <div class="project-tag">School</div>
           <div class="project-tag">Java</div>
-          <div class="project-tag">POO</div>
-          <div class="project-tag">ANTLR</div>
           <div class="project-tag">Git</div>
+          <div class="project-tag">OOP</div>
+          <div class="project-tag">Agile</div>
+          <div class="project-tag">ANTLR</div>
           <div class="project-tag">Bash</div>
           <div class="project-tag">Jacoco</div>
           <div class="project-tag">16.5/20</div>
         </div>
       </div>
 
-      <div class="project-title">> Création d'une bibliothèque d'interfaces graphique</div>
-      <div class="project-content"> Ce projet a pour but de créer une bibliothèque permettant à un programmeur de
-        réaliser des interfaces graphiques, avec par exemple la création de fenêtre, de boutons, de sliders...
+      <div class="project-title">> Creating a GUI library</div>
+      <div class="project-content"> The aim of this project is to create a library that will 
+        enable a programmer to create graphical interfaces, such as windows, buttons, sliders...
         <div class="project-tags">
-          <div class="project-tag">Scolaire</div>
+          <div class="project-tag">School</div>
           <div class="project-tag">C</div>
           <div class="project-tag">Git</div>
           <div class="project-tag">17/20</div>
         </div>
       </div>
     </section>
-    <section class="cv">
-      <div class="section-title">CV </div>
-      Pour voir mon CV, cliquez sur ce bouton :
-      <a href="CV_DELAYAT_Ryan.pdf"><div class="btn">Ouvrir</div></a>
+
+    <section>
+      <div class="section-title">Resume </div>
+      To see my resume, click on this button :
+      <a href="RESUME_DELAYAT_Ryan.pdf"><div class="btn">Open</div></a>
     </section>
   </div>
 </body>
