--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </section>
     <section>
       <div class="section-title">Experiences </div>
+      <div class="project-title">> Software development at <a href="https://www.lichens.io">
+          Lichens</a>, September 2023 - February 2024</div>
+      <div class="project-content"> I'm continuing to develop the application I created during my internship, on a part-time basis. </div>
 
       <div class="project-title">> Software development and data analysis internship at <a href="https://www.lichens.io">
           Lichens</a>, 10 weeks, summer 2023</div>
