--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section>
       <div class="section-title">Experiences </div>
       <div class="project-title">> Software development at <a href="https://www.lichens.io">
-          Lichens</a>, September 2023 - February 2024</div>
-      <div class="project-content"> I'm continuing to develop the application I created during my internship, on a part-time basis. </div>
+          Lichens</a> in parallel of my studies, September 2023 - January 2024</div>
+      <div class="project-content"> I'm continuing to develop the application I created during my internship, on a part-time basis. I'm continuing as long as I don't start my end-of-study internship. </div>
 
       <div class="project-title">> Software development and data analysis internship at <a href="https://www.lichens.io">
           Lichens</a>, 10 weeks, summer 2023</div>
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-    <div class="project-title">> Deforming linear elements, <a href="https://www.inria.fr/en">INRIA</a>,
+    <!-- <div class="project-title">> Deforming linear elements, <a href="https://www.inria.fr/en">INRIA</a>,
       February - May 2023, half a day per week
     </div>
     <div class="project-content"> This project takes place in the context of the 
@@ -73,7 +73,7 @@
       
       <a href="IRL_Presentation.pdf"><div class="btn">My presentation</div></a>
 
-    </div>
+    </div> -->
 
     </section>
     <section class="projects">
